# Mercury

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled Diagram.drawio  imgui.ini
.github/workflows/: cmake-multi-platform.yml
AndroidStudio/app/: build.gradle.kts
AndroidStudio/app/src/androidTest/java/com/mercury/testbed/: ExampleInstrumentedTest.kt
AndroidStudio/app/src/main/: AndroidManifest.xml
AndroidStudio/app/src/main/cpp/: CMakeLists.txt  Renderer.h
AndroidStudio/app/src/main/java/com/mercury/testbed/: MainActivity.kt
AndroidStudio/app/src/main/res/values/: strings.xml
AndroidStudio/app/src/test/java/com/mercury/testbed/: ExampleUnitTest.kt
AndroidStudio/gradle/: libs.versions.toml
AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
PrebuiltLibriaries/android/release/: openxr_loader.lib
VisualStudio/: .gitignore  Mercury.cpp  Mercury.sln  Mercury.vcxproj  Mercury.vcxproj.filters  ToDo.txt
VisualStudio/Mercury/x64/Debug/Mercury.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Mercury.lastbuildstate
VisualStudio/SolarBaker/: SolarBaker.vcxproj  SolarBaker.vcxproj.filters  packages.config
VisualStudio/TestBed/: .gitignore  TestBed.vcxproj  TestBed.vcxproj.filters
VisualStudio/TestBed/AndroidPackaging/.agde/: agde.gradle
VisualStudio/TestBed/AndroidPackaging/app/: build.gradle
VisualStudio/TestBed/AndroidPackaging/app/src/androidTest/java/com/mercury/testbed/: ExampleInstrumentedTest.java
VisualStudio/TestBed/AndroidPackaging/app/src/main/: AndroidManifest.xml
VisualStudio/TestBed/AndroidPackaging/app/src/main/cpp/: JniBindings.cpp
VisualStudio/TestBed/AndroidPackaging/app/src/main/java/com/mercury/testbed/: MainActivity.java
VisualStudio/TestBed/AndroidPackaging/app/src/main/res/values/: strings.xml
VisualStudio/TestBed/AndroidPackaging/app/src/test/java/com/mercury/testbed/: ExampleUnitTest.java
VisualStudio/TestBed/AndroidPackaging/gradle/wrapper/: gradle-wrapper.properties
VisualStudio/TestBedXR/: TestBedXR.cpp  TestBedXR.vcxproj  TestBedXR.vcxproj.filters  imgui.ini
VisualStudio/TestBedXR/AndroidPackaging/: .gitignore
VisualStudio/TestBedXR/AndroidPackaging/.agde/: agde.gradle
VisualStudio/TestBedXR/AndroidPackaging/app/: build.gradle
VisualStudio/TestBedXR/AndroidPackaging/app/src/main/: AndroidManifest.xml
VisualStudio/TestBedXR/AndroidPackaging/app/src/main/res/values/: strings.xml
VisualStudio/x64/Debug/: Mercury.idb  Mercury.lib
assets_packer/: CMakeLists.txt
engine/: CMakeLists.txt
engine/builtinShaders/: sprite.frag  sprite.hlsl  sprite.vert  static_mesh.frag  static_mesh.hlsl  static_mesh.vert  static_mesh_stereo.hlsl  testPointCache.frag  testPointCache.vert  testTriangle.frag  testTriangle.vert  test_hlsl.hlsl
engine/include/: mercury.h  mercury_api.h  mercury_application.h  mercury_buffer.h  mercury_canvas.h  mercury_entrypoint.h  mercury_framegraph.h  mercury_imgui_interface.cpp  mercury_imgui_interface.h  mercury_log.h  mercury_material.h  mercury_mesh.h  mercury_rendering.h  mercury_shader.h  mercury_utils.h
engine/src/: application.cpp  application.h  canvas.cpp  context.h  engine.cpp  engine.h  internal_shaders.cpp  llri.h  llsi.h  llvri.h  logger.cpp  mercury.ixx  mercury_imgui.cpp  mercury_imgui.h  mercury_utils.cpp  mesh.cpp  mesh_internal.h  parametrical_meshes.cpp  platform.cpp  platform.h  rendering.cpp  shader.cpp  shader_bytecode.h  shader_bytecode_dxil.cpp  shader_bytecode_msl.cpp  shader_bytecode_spirv.cpp  swapchain.h  system.ixx
engine/src/android/: system_android.cpp  system_impl.cpp
engine/src/emscripten/: imgui_impl_emscripten.cpp  imgui_impl_emscripten.h  system_emscripten.cpp
engine/src/ios/: entry_point.cpp
engine/src/linux/: system_impl.cpp  system_linux.cpp
engine/src/llri_d3d12/: d3d12_context.cpp  d3d12_llri.cpp  d3d12_llri.h  d3d12_swapchain.cpp  d3d12_swapchain.h  d3d12_utils.cpp  d3d12_utils.h
engine/src/llri_metal/: metal_context.cpp  metal_llri.cpp  metal_llri.h  metal_swapchain.cpp  metal_swapchain.h
engine/src/llri_vulkan/: mercury_vulkan.cpp  mercury_vulkan.h  vk_context.cpp  vk_llri.cpp  vk_llri.h  vk_spirv_internal_shaders.cpp  vk_swapchain.cpp  vk_swapchain.h  vk_utils.cpp  vk_utils.h
engine/src/llri_webgpu/: webgpu_context.cpp  webgpu_llri.cpp  webgpu_llri.h  webgpu_swapchain.h
engine/src/llsi_miniaudio/: ma_llsi.cpp  ma_llsi.h
engine/src/llvri_apple_vision/: llvri_apple_vision.h
engine/src/llvri_openxr/: llvri_openxr.cpp  llvri_openxr.h  mercury_openxr.cpp  mercury_openxr.h
engine/src/macos/: cocoa_wrapper.h  cocoa_wrapper.mm  imgui_wrapper.mm  metal_impl.cpp  system_macos.cpp  system_macos.mm
engine/src/vulkan/: mercury_vulkan.cpp  mercury_vulkan.h  vk_llri.cpp  vk_swapchain.cpp
engine/src/windows/: entry_point.cpp  system_impl.cpp  system_windows.cpp  system_winstore_app.cpp
solar_baker/: CMakeLists.txt
solar_baker/src/: app.h  imgui_fonts.h  main.cpp  material_preview.cpp  material_preview.h  sbproj_source.cpp  sbproj_source.h  screen_main.cpp  screen_main.h  screen_shader_editor.cpp  screen_shader_editor.h  screen_shader_editor.idl  screen_shader_editor.xaml  screen_shaders_editor.cpp  screen_shaders_editor.h  shader_compiler.cpp  shader_compiler.h  shader_compiler_glsl.cpp  shader_compiler_hlsl.cpp  shader_resource_limits.cpp  solar_baker_config.h  solar_baker_project.cpp  solar_baker_project.h
test_em_webgpu/: CMakeLists.txt  main.cpp
testbed/: CMakeLists.txt
testbed/src/: hello_cubes.cpp  hello_sprites.cpp  test_nv_decompress.cpp  testbed.cpp
testbed_xr/src/: testbed_xr.cpp
